@@ -4,9 +4,24 @@ DIST rust-1.34.1-aarch64-unknown-linux-gnu.tar.xz 120842956 BLAKE2B 125936409036
 DIST rust-1.34.1-armv7-unknown-linux-gnueabihf.tar.xz 124571496 BLAKE2B b5282d706352e39dd986afd68565a0eb35b029f3b513e5c3e4e07dc4fc36a351536e4976c65db532acd9db4d07ea24ec5bb65238571e5bf17f0d9589c889aec5 SHA512 5955acdfba0f330903fdb3e2b550db246c91dedc1a42a56818c918e1ce656217d0a6117a1493e444ba35187a5bb4ecb78a8ace76aff1741aa7fcedef97741068
 DIST rust-1.34.1-i686-unknown-linux-gnu.tar.xz 169612152 BLAKE2B de955ed364060f5458f2c65a51c8b9e75f881bf1e3a1d5f53847205684ef8ac856d459f2f7552f746100fc8f9f8732a5b44cdddb5425f23f6754ba874834d106 SHA512 a68a69107d21f3cf9a5541a85d96cbe64aba6fa0f433690643edcb837c029276d14e72b0b7500257e57aeee476d516bd0eb09fe1d558118a67bb9c986b218ca1
 DIST rust-1.34.1-x86_64-unknown-linux-gnu.tar.xz 157366684 BLAKE2B c55f03046d7aa98372b8642152391536f8bce4f7e39a1d1292e44b0f434e8278fe7353362f35c966dad7a985849b5ab94977b7320e8b15f54a0b360d9ae8ff54 SHA512 88226cc1c4492fec35ed32433d9f1a2a2b284d5803d37111ff3d1ee63b2f0500722ea1b9a771cd80853dbc5b9a0ad382baeb362d7edf82ef49a093ae780470ee
+DIST rust-1.48.0-aarch64-unknown-linux-gnu.tar.xz 133782948 BLAKE2B 95e80db4734a91a1aed6433cb6dcc65358ef713f365216f6c344c4940c2b5e43b7dc5805f53635c4e7585e70c9d5773b6c93034fa2ffd0a28efb2f20a18f1be8 SHA512 6ebbd936b1bc2ccf30b62dbbbc6f3986fb57738d89e33a23d58bab09be57a445c17df7912866add91cc108ef7547d229a08c6206db2d2fb00d72887ff6a0894d
+DIST rust-1.48.0-arm-unknown-linux-gnueabi.tar.xz 133293068 BLAKE2B f98129d16e0de958a164233a1cc6317dc64eeeee76aa88b6982af2cb0a4b9f798a989b6bc153dcd55a7a6dfd3a8a6b36330faae82fedc133ae927b75638629aa SHA512 8958b8548711bb393e188d7516a842dcde5e7f9751804a90621d28a787a28b330057f343f14f930bafdcbdd8fa2cf391d6a4c1953f6d33a34bcbc65fd0e24e9b
+DIST rust-1.48.0-arm-unknown-linux-gnueabihf.tar.xz 132424008 BLAKE2B ed0aad5dba3eff6ca18eac5e7fc1864d2b72e262b5c8d6b510196653edc505bcb2327d529b326b10279ad19d6e2258e40103ed39067094f6ac2bd9dfed170b35 SHA512 d932676a579eed1849e58c133aa3759750b01436aa6f837098953cc558b9025427bdd54f1f2688aa0022934c48177da34874e27cc319c7bf1c96e219615d2bb2
+DIST rust-1.48.0-armv7-unknown-linux-gnueabihf.tar.xz 134716224 BLAKE2B 1918eadca80dbaacb4700dc5af8c791cc0966a29b4d01bba10e8ec31d5506a2748f4a0c9ed6695e9aa9cd88511e0dc347354a1410b419013757d9ae443e9e9af SHA512 9763b0c5bc5dc7b265b86636ed32947aab98bd9b5732c4b298ade93e9a09bab82ad37fc7ca2d7c97dfd87634756b3c55015d47696c0a6ed2cb44be03659bcf55
+DIST rust-1.48.0-i686-unknown-linux-gnu.tar.xz 161602224 BLAKE2B e4f1d1b51d520f85f7af8ddd12ad716d8c501a25d1bcdf40efd23902da9c35168108ba705c08a7aa3617ac1afb41584180d1d2399732918900f9126158111c25 SHA512 b8b3c5407304a333fc6c10ad70363589a88673640dda7b5fde8971097e679f56a8c733da31b2183044ae2ce30700db923cc3c3cb8c590d785df680b60b199451
+DIST rust-1.48.0-mips-unknown-linux-gnu.tar.xz 96393696 BLAKE2B 6cd06b3b1b8aeb4b251bc14e47dd8b8cd099f9292705402d718657de4efd480f8999bf23694d9be455236e3ebd4d330b2645a0333eeab7f9a189239df5e02698 SHA512 973130e8c0924e4a22e3b803102b96e80d6247328879a92c3bf0d9e80ec185264b980bd481ee79b6f8afe8e47f7fd61b9657a85adb7ae99008357d39e2428a39
+DIST rust-1.48.0-mips64-unknown-linux-gnuabi64.tar.xz 107548156 BLAKE2B 98b481032689f094490689b3af5a0a9162c8bf0ac8a60203b0be2de0f0ac555296e0401d1d534934d2faee852c61b20324aadf0a1696dd57607b71389f03071a SHA512 b3adf893d3e1a36da859bbd3cb39acebb2358522591694e636574ac5a1f81484a60ee53a9de7f348717fbfdaac9f2dd6ec27ea78959cdf94346d251d4a6be877
+DIST rust-1.48.0-mipsel-unknown-linux-gnu.tar.xz 97538116 BLAKE2B c4777428637bf2a08964b0abf048c2ea3b895901130f6b2c4307bfd448c7e09e2d8e862d0a10bab23c73a580aa2e9d868c7716d6a7fd103fa40f0d4207090c71 SHA512 09529c30c2b31317a495b058ee48d8ad7b0c89a59a70e62c9085d59bbd2f22a37223956a13959175cd05b195b7541feac9b8acc49438f575fce3fad26d2bd927
+DIST rust-1.48.0-powerpc-unknown-linux-gnu.tar.xz 106401772 BLAKE2B 2b10bb21198b9104dee49038ca4a7bee9dc93331465166ce9ca451d84c7e759e7bd5635c017223f6a1b96f71430a8240bd65022e9067fb20e5be85d06e79baba SHA512 b77afbca6fe9f1122c863bee14a764adb1dc5f233058292c5aaa72e50f473c1f9cccd1fc08c427485a7edab460fcea595544fd902d5f96d290e208aa03d910a3
+DIST rust-1.48.0-powerpc64-unknown-linux-gnu.tar.xz 120497676 BLAKE2B 6aa1dedcf5953f1292997fa7aac19067a6daa5e676a7e5fb7b7a29707831328b5514a88904edcc00dcf76d32e911646c8a349e40431a531585c373ce755bfb3c SHA512 f79e1f984cc3c4dce08599418be2885666e0b6f73e639b10e97ffff4b900606d880c0596b6c2ab7c5f999cfc364d22b2ca6ab88db6ba38b8b227670b222fe23b
+DIST rust-1.48.0-powerpc64le-unknown-linux-gnu.tar.xz 124335896 BLAKE2B fe95cb27e69258d4b0fe471e856bc98d4ddae3d90c7d5bbd723575cb86da28061c8b0ca8f5fd945f0ce4789997f5e7658edf5f40b57aa215d76ffeb3c3207602 SHA512 7ddd2b0599872012f8613ccab456622cb05a0a43587b7d389e8b7fdf9381f0387763726d892da931233c89e8e3ce45c2b303ed00b1cce1f91c88d8f88d6b148d
+DIST rust-1.48.0-s390x-unknown-linux-gnu.tar.xz 127221600 BLAKE2B 08511be6aadc0feb36caa19df5914a207565eed3b4b3914cad7fc8f7170011a7431c14d50b1334f5d5e00b4c94e7e84ee59afad179286e889480cc9b21e1f402 SHA512 b2b1565f3b1cc0c3bf4aa06aba1da7df775c6e29c892ca7727d0e549f175b632080433be2586e799c5636231de6c678f0228dedee8358fbf167016a1f7d25389
+DIST rust-1.48.0-x86_64-unknown-linux-gnu.tar.xz 155254844 BLAKE2B 37bce978eb297bb1732f9d513bb6fdcee4aefc42a578496a84b5f8abbb9f90f1c524c73f28c85f33c25a365bf5ba566253b1739009bb112c2e1d46a2ed978e10 SHA512 0784e156e70c47386abfa88ecfeb62b1109364459b1fee225de0749c30379c4eb443ff3ff7faa7dc1a6ff373bc6eb43997007f937889cb35daf940a74641753b
+DIST rust-1.48.0-x86_64-unknown-linux-musl.tar.xz 168361012 BLAKE2B efeb9a9812f2fa2cbf1cfd963b5b714cf18d73ca9b7a3de4efa701acf7e2e8fc3b610cd90f7391b10bddd1c9d44b8b0aa910f58ce739750d4e910b063825dc28 SHA512 7188fb0b1bf6fd6ab320089cd17f334867baefec1a9c57a81e6cb729276456e56850938dbd0eafbc52375266a87392ad3045a4dbd2c41689bba6b0da152e4034
 DIST rustc-1.34.2-src.tar.xz 95048792 BLAKE2B e81e4bfda87ddfb09ab8a74792346970aa440c678d2bb1279c329db4929282f761ada6fea9d81ceeecfd513613025c8e636487626fc36bd0b33559e045bb1b15 SHA512 f1bd2b226d90aae8a4657e6117b9a8451d4ce8129f79cc0fce0da7613a3b7800e690bc0ede8fec20a2f5f32c13fa8e22ac97d3838e0d36936793535a75d9c381
+DIST rustc-1.49.0-src.tar.xz 108330280 BLAKE2B 65e36253482ded2df225cbbf15253b6c9a8ae935053b071d9fb9e7b1d47d5d3ac47a138876e4a5cfeda455c655ac06ceff2658c8668cef7d2206116906740653 SHA512 fd8bc67ec0a73d3b6bf9c1fabb7ea981ef817644b4e6ced982fa90b12eae9b55de074634a670bdfb38bfee6588603e818ddcbcc2f2a05f83057c061b4194b4b7
 EBUILD rust-1.34.2-r1.ebuild 10350 BLAKE2B b1b5058cc5896695547303a79e43aab049b4ad075d329391abd88600570338e4b4a0ad6d7f127e82a87c7b383cce30489c9119a1aaa75da73fc94042445ff0d1 SHA512 70035cf0bbd8771210ab6492f594cba314e5de177b9155e42be494e2f6152d999d627ec7002a80100b1047b059d6232bc5ba9020396413c0a7c4f1c76f9d89f8
 EBUILD rust-1.34.2.ebuild 10351 BLAKE2B 116b162faecb18262bba04a681de114af02c563397802b5e36665f0de1e1506be49f62b14f8710a8b1eeab4b35ae73f346e5206dd131e483f5b53496c91ba0ab SHA512 5e4ad88308fe61541080a4bffb43b00d2913e0d01cfde9ef56c60c201fbe6a487fcb48fe7cf14199ee352be2aafe4fc575de9f59e6b6b0d3a7b7ba723c5530d6
-MISC ChangeLog 55 BLAKE2B d51d43e4355009debf0a354898e57e5d2a02257bee5d5f6a1151f90ac1e6ca2d253d85c9ad85115119acbc29a78119b1341cb24efbbf2ef71ddfe903e63ab965 SHA512 dc0f58c4ebc4662ef54ff513fa95fa5cbf9cbfb3c74e48309599d4947d37308eff85dfffa91f8f748c55ae7ef6d8bac524cf612e4b749b4f8269154b6428937e
-MISC README.md 85 BLAKE2B ccd08be24c45811efc931de97d0fdea40003d9383385e22a0d882e9ea6f8dc0c6801581f56aff364d541e41575c4eccfc6e4ec9e306095c6fa496d15434d1c87 SHA512 5a7ba874a6a63920d7e74bf06b0459ba41b661dca4dc6f50c64c7c52a3b2f81d6a48adf3fe4b56c180063114e9290ab67bd2d04db11b09a30a6b5b9827360cac
+EBUILD rust-1.49.0.ebuild 17939 BLAKE2B ee168f345516debe565007e19efdf2b1c570ef43b061d0444450276158534f5488861cd670ea001572b7f2471c0dad4b326d53122262b0cdfa0cdedad5458094 SHA512 792062b0896d6e1df32167fa3deef45c50af2da963b47a781e3ee0f9dfdf0cd2dd5fd6f735c4340be64fb103ac67fcac2eae74e5e6c759d9d6d5741c8e866ecd
+MISC ChangeLog 416 BLAKE2B 463212c45c6a002590b1910aef877de5d44fb5362353c3b47b9f3c32549906800c50d6671d2957c53b47ba8973a6b5ec35fad71abb500e9ae6d4037240fb5b31 SHA512 b39feaebb1cf245de218a1f4488d7da83ec04d7b2e2bbdab1b7a3240f4372433845403a995802188076238f93da1e4f15239c41d3410468eef7d7b2e56cd6586
 MISC metadata.xml 791 BLAKE2B 590d5d9ccf140d86fa7c40c335f9876b2352d1caf9aa71ec4dae4437d9bfcabcaf4a6a982c3fbdfdc9032ad14726ac1c7c879b953db0e4789cc50343ec0aab52 SHA512 fdc6271aac5738ac402b929a2383b8e9a56c3b10da5273f7aad7ae57db4a4041addbfe9987f211249f4e64ec9e6e4e93300253809e3989c79b2b5108ab90dcaa
